



########### install files ###############

install( FILES top-right-akregator.png  	main.html  	akregator.css  DESTINATION ${DATA_INSTALL_DIR}/akregator/about)




#original Makefile.am contents follow:

#about_DATA = \
#	top-right-akregator.png \
#	main.html \
#	akregator.css
#
#aboutdir = $(kde_datadir)/akregator/about
