install(FILES kmmsgnew.png kmmsgunseen.png DESTINATION ${DATA_INSTALL_DIR}/akregator/pics)

ecm_install_icons( ICONS hi128-apps-akregator.png  hi16-apps-akregator_empty.png  hi16-apps-akregator.png  hi22-apps-akregator.png  hi256-apps-akregator.png  hi32-apps-akregator.png  hi48-apps-akregator.png  hi64-apps-akregator.png DESTINATION ${ICON_INSTALL_DIR} )
