install(FILES kmmsgnew.png kmmsgunseen.png DESTINATION ${KDE_INSTALL_DATADIR}/akregator/pics)

ecm_install_icons( ICONS hi128-apps-akregator.png  hi16-apps-akregator_empty.png  hi16-apps-akregator.png  hi22-apps-akregator.png  hi256-apps-akregator.png  hi32-apps-akregator.png  hi48-apps-akregator.png  hi64-apps-akregator.png DESTINATION ${KDE_INSTALL_ICONDIR} )
